Fix scrolling on iOS Safari

--- a/web/main.css
+++ b/web/main.css
@@ -6,7 +6,6 @@
 html, body {
 	height: 100%;
 	margin: 0;
-	overflow-y: auto;
 }
 
 body, input, button, p {
